[package]
name = "diy_os"
version = "0.1.0"
authors = ["kghite <kghite@gmail.com>"]

[dependencies]
volatile = "0.2.3"
spin = "0.4.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
array-init = "0.0.3"

[package.metadata.bootimage]
default-target = "x86_64-diy_os.json"
